--- a/src/client/styles/colors/red.pcss
+++ b/src/client/styles/colors/red.pcss
@@ -1,12 +1,12 @@
 :root {
-  --red-50: #FFEBEE;
-  --red-100: #FFCDD2;
-  --red-200: #EF9A9A;
-  --red-300: #E57373;
-  --red-400: #EF5350;
-  --red-500: #F44336;
-  --red-600: #E53935;
-  --red-700: #D32F2F;
-  --red-800: #C62828;
-  --red-900: #B71C1C;
+  --red-50: #ffebee;
+  --red-100: #ffcdd2;
+  --red-200: #ef9a9a;
+  --red-300: #e57373;
+  --red-400: #ef5350;
+  --red-500: #f44336;
+  --red-600: #e53935;
+  --red-700: #d32f2f;
+  --red-800: #c62828;
+  --red-900: #d71c1c;
 }
