--- a/src/client/components/button/styles.pcss
+++ b/src/client/components/button/styles.pcss
@@ -8,6 +8,7 @@
   width: 100%;
   line-height: var(--text-800);
   box-shadow: 0 2px 15px 1px var(--grey-shadow);
+  background: 0;
 
   &[disabled] {
     cursor: default;
