--- a/src/client/layouts/main/components/footer/styles.pcss
+++ b/src/client/layouts/main/components/footer/styles.pcss
@@ -1,47 +1,23 @@
-@import 'variables.pcss';
-
-.wrap {
-  border-top: 1px solid var(--grey-300);
-  background: var(--grey-100);
-  padding: calc(var(--distance-900) * 2) 0;
-  margin-top: var(--distance-900);
-
-  &.purple {
-    background: var(--deep-purple-100-50);
-  }
-
-  &.green {
-    background: var(--green-100-30);
-  }
-
-  &.blue {
-    background: var(--light-blue-100-30);
-  }
-}
-
 .footer {
-  margin: 0 auto;
-  padding: 0 var(--distance-700);
-  width: 100%;
-  max-width: var(--max-container-width);
-  box-sizing: border-box;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-
-  svg {
-    width: 80px;
-    height: 50px;
-  }
+  text-align: center;
+  padding: 100px 0 50px 0;
 }
 
-.link {
-  font-weight: var(--text-weight-600);
-  text-decoration: none;
-  font-size: var(--text-500);
-  margin-left: var(--distance-600);
+.contactUs {
+  font-size: 17px;
+  font-weight: bold;
+  color: black;
+  margin-bottom: 10px;
+  display: block;
+}
 
-  &:hover {
-    text-decoration: underline;
+.info {
+  line-height: 1.7;
+}
+
+.logo {
+  svg {
+    width: 180px;
+    height: 62px;
   }
 }
