--- a/src/client/styles/global.pcss
+++ b/src/client/styles/global.pcss
@@ -3,8 +3,12 @@
 
 * {
   font-size: 100%;
-  font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
-  color: #777;
+  font-family: oxygen mono, monospace;
+  color: rgba(0, 34, 51, 0.6);
+}
+
+a {
+  color: inherit;
 }
 
 html {
