[*] Fix discards after review

--- a/src/client/components/button/styles.pcss
+++ b/src/client/components/button/styles.pcss
@@ -33,6 +33,10 @@
   background: var(--light-blue-gradient);
 }
 
+.transparent {
+  background: 0;
+}
+
 .medium {
   padding: var(--distance-600) var(--distance-500);
   font-size: var(--text-500);
