--- a/src/client/layouts/main/components/footer/styles.pcss
+++ b/src/client/layouts/main/components/footer/styles.pcss
@@ -1,18 +1,20 @@
+@import 'variables.pcss';
+
 .footer {
   text-align: center;
-  padding: 100px 0 50px 0;
+  padding: var(--distance-2300) 0 var(--distance-1300) 0;
 }
 
 .contactUs {
-  font-size: 17px;
+  font-size: var(--text-550);
   font-weight: bold;
   color: black;
-  margin-bottom: 10px;
+  margin-bottom: var(--distance-500);
   display: block;
 }
 
 .info {
-  line-height: 1.7;
+  line-height: var(--text-line-height);
 }
 
 .logo {
