--- a/src/client/layouts/main/components/section/styles.pcss
+++ b/src/client/layouts/main/components/section/styles.pcss
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   border-bottom: 1px solid var(--grey-300);
   margin: 0 auto;
-  padding: 0 20px;
+  padding: 0 var(--distance-700);
 
   & .content {
     max-width: 1160px;
@@ -18,15 +18,15 @@
 }
 
 .shadow {
-  padding: 100px 20px;
+  padding: var(--distance-2300) var(--distance-700);
   background-color: #f7fafd;
 
   & .content {
-    border-radius: 10px;
+    border-radius: var(--border-radius-800);
     box-shadow: 0 4px 10px rgba(50, 50, 93, 0.1);
     margin: 0 auto;
     widows: auto;
     background-color: white;
-    padding: 0 40px;
+    padding: 0 var(--distance-1100);
   }
 }
