--- a/src/client/pages/main/components/Video/styles.pcss
+++ b/src/client/pages/main/components/Video/styles.pcss
@@ -2,6 +2,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position-y: center;
+  background-image: url(/static/video-preview.jpg);
   height: 500px;
   display: flex;
 }
