--- a/src/client/layouts/main/components/header/styles.pcss
+++ b/src/client/layouts/main/components/header/styles.pcss
@@ -1,9 +1,8 @@
 @import 'variables.pcss';
 
 .nav {
-  padding-top: 35px;
   width: 100%;
-  margin-top: var(--distance-800);
+  margin-top: var(--distance-1700);
   min-height: 50px;
   color: var(--white);
 
@@ -14,62 +13,62 @@
     width: 100%;
     z-index: 1;
     flex-flow: row wrap;
+  }
+}
 
-    & > .item {
-      a {
-        color: var(--white);
-        text-decoration: none;
-      }
+.item {
+  a {
+    color: var(--white);
+    text-decoration: none;
+  }
 
-      &.logo {
-        svg {
-          width: 180px;
-          height: 62px;
-        }
-      }
+  &.logo {
+    svg {
+      width: 180px;
+      height: 62px;
+    }
+  }
+}
 
-      & > .links {
-        display: flex;
-        margin: 0;
-        padding: 0;
+.links {
+  display: flex;
+  margin: var(--distance-450) 0 0 0;
+  padding: 0;
+}
 
-        & > .link {
-          list-style: none;
-          font-size: var(--text-600);
-          padding: 0 var(--distance-800);
-          line-height: 50px;
-          transition: border-bottom 0.25s ease;
-          cursor: pointer;
+.link {
+  list-style: none;
+  font-size: var(--text-600);
+  padding: 0 var(--distance-800);
+  line-height: 50px;
+  transition: border-bottom 0.25s ease;
+  cursor: pointer;
 
-          &:hover {
-            border-bottom: 5px solid #44bd31;
-          }
+  &:hover {
+    border-bottom: 5px solid var(--auxilin-green);
+  }
 
-          .login {
-            font-size: var(--text-600);
+  .login {
+    font-size: var(--text-600);
 
-            a {
-              padding: var(--distance-500) var(--distance-700);
-              display: flex;
-            }
+    a {
+      padding: var(--distance-500) var(--distance-700);
+      display: flex;
+    }
 
-            .text {
-              flex-shrink: 0;
-            }
+    .text {
+      flex-shrink: 0;
+    }
 
-            .arrow {
-              stroke: #777;
-              transition: transform 0.5s ease;
-              margin-left: var(--distance-400);
-              transform: translateX(0);
-            }
+    .arrow {
+      stroke: var(--main-text);
+      transition: transform 0.5s ease;
+      margin-left: var(--distance-400);
+      transform: translateX(0);
+    }
 
-            &:hover .arrow {
-              transform: translateX(5px);
-            }
-          }
-        }
-      }
+    &:hover .arrow {
+      transform: translateX(5px);
     }
   }
 }
@@ -82,16 +81,8 @@
 }
 
 @media screen and (max-width: 700px) {
-  .nav {
-    .menu {
-      & > .item {
-        .links {
-          & > .link {
-            padding: 0 10px;
-          }
-        }
-      }
-    }
+  .link {
+    padding: 0 var(--distance-500);
   }
 
   .logo {
