--- a/src/client/pages/main/styles.pcss
+++ b/src/client/pages/main/styles.pcss
@@ -1,17 +1,17 @@
 @import 'variables.pcss';
 
 .green {
-  color: #44bd31;
+  color: var(--auxilin-green);
   font-family: inherit;
 }
 
 .title {
   color: #000;
   text-align: left;
-  font-size: 65px;
+  font-size: var(--text-1350);
   line-height: 1.1;
   font-family: roboto, sans-serif;
-  font-weight: 600;
+  font-weight: var(--text-weight-600);
 
   &.short {
     max-width: 400px;
@@ -22,13 +22,13 @@
   }
 
   &.large {
-    font-size: 81px;
+    font-size: var(--text-1510);
   }
 }
 
 .subtitle {
-  font-size: 20px;
-  line-height: 1.7;
+  font-size: var(--text-700);
+  line-height: var(--text-line-height);
   margin: 0;
 
   &.short {
@@ -36,7 +36,7 @@
   }
 
   &.quote {
-    padding: 10px 0;
+    padding: var(--distance-500) 0;
   }
 }
 
@@ -57,7 +57,7 @@
   justify-content: center;
 
   h1 {
-    margin: 50px 0;
+    margin: var(--distance-1300) 0;
   }
 }
 
@@ -65,7 +65,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding: 100px 0;
+  padding: var(--distance-2300) 0;
 
   h1 {
     margin: 0;
@@ -113,12 +113,12 @@
 }
 
 .button {
-  background-color: #44bd31;
+  background-color: var(--auxilin-green);
   padding: 18px 24px;
   margin: 0 5px;
   text-decoration: none;
-  font-size: 18px;
-  font-weight: 600;
+  font-size: var(--text-600);
+  font-weight: var(--text-weight-600);
   transition: all 0.3s ease-in-out;
   color: #fff;
   display: inline-block;
@@ -128,7 +128,7 @@
 
   a {
     padding: 0;
-    font-size: 18px;
+    font-size: var(--text-600);
   }
 
   &:hover {
@@ -176,7 +176,7 @@
 
       .title {
         text-align: center;
-        font-size: 50px;
+        font-size: var(--text-1200);
       }
     }
 
@@ -194,7 +194,7 @@
 
       .title {
         text-align: center;
-        font-size: 50px;
+        font-size: var(--text-1200);
       }
     }
 
