--- a/src/client/styles/colors/green.pcss
+++ b/src/client/styles/colors/green.pcss
@@ -10,5 +10,6 @@
   --green-700: #2a8343;
   --green-800: #25743c;
   --green-900: #206634;
+  --auxilin-green: #44bd31;
   --green-gradient: linear-gradient(to right, #44bd317a 0%, #44bd31 100%);
 }
