--- a/src/client/styles/global.pcss
+++ b/src/client/styles/global.pcss
@@ -4,7 +4,7 @@
 * {
   font-size: 100%;
   font-family: oxygen mono, monospace;
-  color: rgba(0, 34, 51, 0.6);
+  color: var(--main-text);
 }
 
 a {
