--- a/src/client/styles/variables.pcss
+++ b/src/client/styles/variables.pcss
@@ -63,5 +63,7 @@
   --text-height-500: 24px;
   --text-height-600: 26px;
   --text-height-700: 30px;
-  --text-line-height: 1.7;
+  --text-line-height-100: 1;
+  --text-line-height-110: 1.1;
+  --text-line-height-170: 1.7;
 }
