--- a/src/client/layouts/main/components/section/styles.pcss
+++ b/src/client/layouts/main/components/section/styles.pcss
@@ -19,14 +19,14 @@
 
 .shadow {
   padding: var(--distance-2300) var(--distance-700);
-  background-color: #f7fafd;
+  background-color: var(--grey-50);
 
   & .content {
     border-radius: var(--border-radius-800);
     box-shadow: 0 4px 10px rgba(50, 50, 93, 0.1);
     margin: 0 auto;
     widows: auto;
-    background-color: white;
+    background-color: var(--white-50);
     padding: 0 var(--distance-1100);
   }
 }
