--- a/src/client/pages/main/components/video/styles.pcss
+++ b/src/client/pages/main/components/video/styles.pcss
@@ -19,7 +19,7 @@
   }
 }
 
-.playButton {
+.play-button {
   margin: auto;
   height: 128px;
   width: 128px;
@@ -39,7 +39,7 @@
   }
 }
 
-.videoContainer {
+.video-container {
   position: fixed;
   top: 0;
   z-index: 17;
@@ -47,7 +47,7 @@
   width: 100vw;
 }
 
-.videoOverlay {
+.video-overlay {
   background: black;
   height: 100vh;
   width: 100vw;
@@ -63,7 +63,7 @@
   margin: 5vh auto;
 }
 
-.closeButton {
+.close-button {
   height: 32px;
   width: 32px;
   background: none;
