--- a/src/client/pages/main/styles.pcss
+++ b/src/client/pages/main/styles.pcss
@@ -65,7 +65,7 @@
   }
 
   @media screen and (max-width: 1000px) {
-    .leftSide {
+    .left-side {
       .title {
         font-size: 50px;
       }
@@ -75,7 +75,7 @@
   @media screen and (max-width: 700px) {
     flex-direction: column;
 
-    .leftSide {
+    .left-side {
       width: 100%;
 
       .title {
@@ -83,7 +83,7 @@
       }
     }
 
-    .rightSide {
+    .right-side {
       width: 100%;
       margin: 0;
     }
@@ -103,7 +103,7 @@
   @media screen and (max-width: 700px) {
     flex-direction: column;
 
-    .leftSide {
+    .left-side {
       width: 100%;
 
       .title {
@@ -112,18 +112,18 @@
       }
     }
 
-    .rightSide {
+    .right-side {
       width: 100%;
       margin: 0;
     }
   }
 }
 
-.leftSide {
+.left-side {
   width: 40%;
 }
 
-.rightSide {
+.right-side {
   width: 55%;
   margin-left: 5%;
 }
@@ -137,7 +137,7 @@
   }
 }
 
-.clientPhoto {
+.client-photo {
   height: 70px;
   border-radius: 50%;
 }
@@ -154,7 +154,7 @@
   @media screen and (max-width: 700px) {
     flex-direction: column;
 
-    .leftSide {
+    .left-side {
       width: 100%;
 
       .title {
@@ -163,7 +163,7 @@
       }
     }
 
-    .rightSide {
+    .right-side {
       width: 100%;
       margin: 0;
       text-align: center;
